--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </header>
   <main>
     <section>
-      <h1>Hi, I'm Nathan.</h1>
-      <p>A User Experience Designer and Frontend Web Developer.</p>
+      <h1>Hi, I'm Medochikita.</h1>
+      <p>Just a guy who wants to do some stuff in python and C++.</p>
       <img src="http://via.placeholder.com/800x400" alt="Placeholder image">
     </section>
     <section id="projects">
@@ -43,7 +43,7 @@
         <li>
           <article>
             <header>
-              <h3>Tuxedo cats always looking dapper</h3>
+              <h3>Discord bot in python using nextcord library</h3>
             </header>
             <p>
               Use lap as chair russian blue spend six hours per day washing,
