--- a/index.html
+++ b/index.html
@@ -46,16 +46,11 @@
               <h3>Discord bot in python using nextcord library</h3>
             </header>
             <p>
-              Use lap as chair russian blue spend six hours per day washing,
-              but still have a crusty butthole so pooping rainbow while flying
-              in a toasted bread costume in space and inspect anything brought
-              into the house, for instantly break out into full speed gallop
-              across the house for no reason knock dish off table head butt
-              cant eat out of my own dish.
+              Using nextcorf library i was able to build a discord bot ( just a simple one ) for me and my friends
             </p>
             <footer>
               <p>
-                <a href="/tuxedo-cats-always-looking-dapper">See More</a>
+                <a href="python-bot.html">See More</a>
               </p>
             </footer>
           </article>
