--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <h3>Discord bot in python using nextcord library</h3>
             </header>
             <p>
-              Using nextcorf library i was able to build a discord bot ( just a simple one ) for me and my friends
+              Using nextcord library i was able to build a discord bot ( just a simple one ) for me and my friends
             </p>
             <footer>
               <p>
@@ -58,13 +58,10 @@
         <li>
           <article>
             <header>
-              <h3>Has closed eyes but still sees you</h3>
+              <h3>Game hacks C++ ( still in progress )</h3>
             </header>
             <p>
-              Love you, then bite you eat prawns daintily with a claw then lick
-              paws clean wash down prawns with a lap of carnation milk then
-              retire to the warmest spot on the couch to claw at the fabric
-              before taking a catnap.
+              Trying to learn game hacking with C++. My final dream would be to hack apex legends.
             </p>
             <footer>
               <p>
