--- a/index.html
+++ b/index.html
@@ -73,13 +73,10 @@
         <li>
           <article>
             <header>
-              <h3>Chew foot shake treat bag</h3>
+              <h3>Basic C++ project for learning</h3>
             </header>
             <p>
-              Ears back wide eyed fooled again thinking the dog likes me freak
-              human out make funny noise mow mow mow mow mow mow success now
-              attack human i love cuddles. Lay on arms while you're using the
-              keyboard.
+              Just some simple program in C++ that i created when i was learning
             </p>
             <footer>
               <p>
