--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="An awesome site that showcases my work!">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="stylesheet" href="css/navigation.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="CSS/navigation.css">
+  <link rel="stylesheet" href="CSS/main.css">
 </head>
 
 <body>
