--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div class="Allcon">
   <header>
     <p>My Portfolio</p>
     <nav>
@@ -88,5 +89,6 @@
       </ul>
     </section>
   <footer></footer>
+  </div>
 </body>
 </html>
