--- a/index.html
+++ b/index.html
@@ -14,29 +14,34 @@
 <body>
   <div class="Allcon">
   <header>
-    <p>My Portfolio</p>
     <nav>
+      <label class="logo">Medochikita</label>
       <ul>
         <li>
-          <a href="/">Home</a>
+          <a href="index.html">Home</a>
         </li>
         <li>
           <a href="#projects">Projects</a>
         </li>
         <li>
-          <a href="/about">About</a>
+          <a href="#about">About</a>
         </li>
         <li>
-          <a href="#contact">Contact</a>
+          <a href="HTML/contact.html">Contact</a>
         </li>
       </ul>
     </nav>
   </header>
   <main>
-    <section>
+    <section id="intoduction">
       <h1>Hi, I'm Medochikita.</h1>
       <p>Just a guy who wants to do some stuff in python and C++.</p>
-      <img src="http://via.placeholder.com/800x400" alt="Placeholder image">
+      <br>
+      <br>
+      <h1>Hi, I'm Medochikita.</h1>
+      <p>Just a guy who wants to do some stuff in python and C++.</p>
+      <br>
+      <img src="IMG/profile.JPG" alt="Profile image">
     </section>
     <section id="projects">
       <h2>Projects</h2>
@@ -51,7 +56,7 @@
             </p>
             <footer>
               <p>
-                <a href="python-bot.html">See More</a>
+                <a href="HTML/python-bot.html">See More</a>
               </p>
             </footer>
           </article>
@@ -66,7 +71,7 @@
             </p>
             <footer>
               <p>
-                <a href="has-closed-eyes-but-still-sees-you">See More</a>
+                <a href="HTML/hackingcplusplus.html">See More</a>
               </p>
             </footer>
           </article>
@@ -81,7 +86,7 @@
             </p>
             <footer>
               <p>
-                <a href="chew-foot-shake-treat-bag">See More</a>
+                <a href="HTML/basiccplusplus.html">See More</a>
               </p>
             </footer>
           </article>
